@startuml クラス図

title クラス図

package com.example.keirekipro.domain.model.resume {
    class Resume {
        - String userId
        - ResumeName name
        - LocalDate date
        - boolean autoSaveEnabled
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        - List<Career> careers
        - List<Project> projects
        - List<Certification> certifications
        - List<Portfolio> portfolios
        - List<SnsPlatform> SnsPlatforms
        - List<SelfPromotion> selfPromotions

        + List<Career> getCareers()
        + List<Project> getProjects()
        + List<Certification> getCertifications()
        + List<Portfolio> getPortfolios()
        + List<SnsPlatform> getSnsPlatforms()
        + List<SelfPromotion> getSelfPromotions()
        + Resume changeName(ResumeName name)
        + Resume changeDate(LocalDate date)
        + Resume changeAutoSaveEnabled(boolean autoSaveEnabled)
        + Resume addCareer(Notification notification, Career career)
        + Resume updateCareer(Notification notification, Career updatedCareer)
        + Resume removeCareer(String careerId)
    }

    class Career {
        - String companyName
        - Period period
        + Career changeCompanyName(String companyName)
        + Career changePeriod(Period period)
    }

    class Certification {
        - String name
        - YearMonth date
        + Certification changeName(String name)
        + Certification changeDate(YearMonth date)
    }

    class Portfolio {
        - String name
        - String overview
        - String techStack
        - Link link
        + Portfolio changeName(String name)
        + Portfolio changeOverview(String overview)
        + Portfolio changeTechStack(String techStack)
        + Portfolio changeLink(Link link)
    }

    class Project {
        - String companyName
        - Period period
        - String name
        - String overview
        - String teamComp
        - String role
        - String achievement
        - Process process
        - TechStack techStack
        + Project changeCompanyName(String companyName)
        + Project changePeriod(Period period)
        + Project changeOverview(String overview)
        + Project changeTeamComp(String teamComp)
        + Project changeRole(String role)
        + Project changeAchievement(String achievement)
        + Project changeProcess(Process process)
        + Project changeTechStack(TechStack techStack)
    }

    class SnsPlatform {
        - String name
        - Link link
        + SnsPlatform changeName(String name)
        + SnsPlatform changeLink(Link link)
    }

    class SelfPromotion {
        - String title
        - String content
        + SelfPromotion changeTitle(String title)
        + SelfPromotion changeContent(String content)
    }

    class Period {
        - YearMonth startDate
        - YearMonth endDate
        - boolean isActive
    }

    class Link {
        - String value
    }

    class ResumeName {
        - String value
    }

    class TechStack {
        - List<String> languages
        - Dependencies dependencies
        - Infrastructure infrastructure
        - Tools tools
    }

    class Process {
        - boolean requirements
        - boolean basicDesign
        - boolean detailedDesign
        - boolean implementation
        - boolean integrationTest
        - boolean systemTest
        - boolean maintenance
    }

    class Dependencies {
        - List<String> frameworks
        - List<String> libraries
        - List<String> testingTools
        - List<String> ormTools
        - List<String> packageManagers
    }

    class Infrastructure {
        - List<String> clouds
        - List<String> containers
        - List<String> databases
        - List<String> webServers
        - List<String> ciCdTools
        - List<String> iacTools
        - List<String> monitoringTools
        - List<String> loggingTools
    }

    class Tools {
        - List<String> sourceControls
        - List<String> projectManagements
        - List<String> communicationTools
        - List<String> documentationTools
        - List<String> apiDevelopmentTools
        - List<String> designTools
    }

    Resume "1" --> "0..n"Career : careers
    Resume "1" --> "0..n"Project : projects
    Resume "1" --> "0..n"Certification : certifications
    Resume "1" --> "0..n"Portfolio : portfolios
    Resume "1" --> "0..n"SnsPlatform : SnsPlatforms
    Resume "1" --> "0..n"SelfPromotion : selfPromotions
    Career --> Period
    Project --> Period
    Portfolio --> Link
    SnsPlatform --> Link
    Resume --> ResumeName : name
    Project --> Process
    Project --> TechStack
    TechStack --> Dependencies
    TechStack --> Infrastructure
    TechStack --> Tools
}

package com.example.keirekipro.domain.shared {
    abstract class Entity {
        - String id
        - int orderNo
        + void changeOrderNo(int orderNo)
    }

    class Notification {
        - Map<String, List<String>> errors
        + void addError(String fieldName, String errorMessage)
        + boolean hasErrors()
    }

    exception DomainException {
        - Map<String, List<String>> errors
    }

    Entity <|-- Resume
    Entity <|-- Career
    Entity <|-- Certification
    Entity <|-- Portfolio
    Entity <|-- SnsPlatform
    Entity <|-- SelfPromotion
}

package com.example.keirekipro.domain.repository.resume {
    interface ResumeRepository {
        + List<Resume> findAll(String userId)
        + Optional<Resume> find(String userId, String resumeId)
        + void save(Resume resume)
        + void delete(String userId, String resumeId)
    }
}

package com.example.keirekipro.domain.service.resume {
    class ResumeNameDuplicationCheckService {
        - ResumeRepository resumeRepository
        + boolean execute(Resume resume)
    }
    ResumeNameDuplicationCheckService --> ResumeRepository
}

@enduml
